--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,48 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <br><br>
+  <h1 align="center">Become A Sustainable Consumer!</h1>
+  <p align="center">Chat with us</p>
+
+<script src="https://static.landbot.io/landbot-widget/landbot-widget-1.0.0.js"></script>
+  <div id="landbot-1553769400684" style="width: 100%; height: 800px"></div>
+<script>
+  var myLandbotFrame = new LandbotFrameWidget({
+    container: '#landbot-1553769400684',
+    index: 'https://landbot.io/u/H-154558-EBCCDC5FNXBUAS5C/index.html',
+  });
+</script>
+  <footer class="page-footer blue font-small pt-4 mt-4 background-footer">
+    <div class="container-fluid text-center text-md-left">
+      <div class="row">
+        <div class="col-md-3">
+
+        </div>
+        <div class="col-md-3">
+          <h5 class="title">Support</h5>
+          <ul>
+            <li class="list-unstyled"><a href="#!">Contact us</a></li>
+            <li class="list-unstyled"><a href="#!">Legal</a></li>
+            <li class="list-unstyled"><a href="#!">Privacy Policy</a></li>
+            <li class="list-unstyled"><a href="#!">Terms of use</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <h5 class="title">Company</h5>
+          <ul>
+            <li class="list-unstyled"><a href="#!">About Us</a></li>
+            <li class="list-unstyled"><a href="#!">Careers</a></li>
+            <li class="list-unstyled"><a href="#!">Press</a></li>
+          </ul>
+          <div class="footer-copyright">© 2019 Reborn - Made in Berlin</div>
+        </div>
+        <div class="col-md-3">
+
+        </div>
+      </div>
+    </div>
+  </footer>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
