--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,7 +29,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <br><br>
+  <!-- <br><br>
   <h1 align="center">Become A Sustainable Consumer!</h1>
   <p align="center">Chat with us</p>
 
@@ -70,7 +70,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
